2002-07-03  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* HOME/END key support is added.

2002-07-02  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Minor code cleanup (xwindow/x_decsp_font.c).

2002-07-01  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Background of line characters did not drawn when 
	  pseudo transparency is enabled. fixed.
	  (Thanks to Tomohiro KUBOTA san)

2002-06-30  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Optimized drawing of line chars.

2002-06-29 Araki Ken <arakiken@users.sf.net>

	* -K,--metakey=[mod1-mod5,meta,alt,super,hyper] option is added.
	  This option works the same as rxvt's -mod option.

2002-06-29 Araki Ken <arakiken@users.sf.net>

	* Background of line characters can be transparent when -Y option is specified.

2002-06-28  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* XDnD sesson was not terminated properly. fixed.

2002-06-25 Araki Ken <arakiken@users.sf.net>

	* XDnD is supported. (Thanks to Minami Hirokazu san)

2002-06-23 Araki Ken <arakiken@users.sf.net>

	* the style of selecting characters in RTL lines is improved.

2002-06-19 Tomohiro KUBOTA <kubota@debian.org>

	* A debug message was displayed by mlconfig even if compiled
	  without DEBUG option; fixed.
	  (Thanks to MINAMI Hirokazu san)

2002-06-16 Araki Ken <arakiken@users.sf.net>

	* 2.5.0 is released.

2002-06-16 Araki Ken <arakiken@users.sf.net>

	* mlterm died if -Y option is specified with -A, -t or -P. fixed.
	  (Thanks to Minami Hirokazu san)

2002-06-15 Araki Ken <arakiken@users.sf.net>

	* if -E iscii was specified, mlterm died. fixed.
	* shaped characters were not shown correctly. fixed.

2002-06-14 Araki Ken <arakiken@users.sf.net>

	* w3mmlconfig is updated.
	* compilation never fails if --enable-utmp option is specified on Cygwin.
	  (Thanks to Sato Seiichi san)

2002-06-13 Araki Ken <arakiken@users.sf.net>

	* If use_dynamic_comb option was dynamically changed over twice, RTL lines