@@ -16,6 +16,8 @@ typedef struct x_window *  x_window_ptr_t ;
 typedef struct x_picture_modifier
 {
 	u_int16_t  brightness ;		/* 0 - 65536 */
+	u_int16_t  contrast ;		/* 0 - 65536 */
+	u_int16_t  gamma ;		/* 0 - 65536 */
 	
 } x_picture_modifier_t ;
 
@@ -41,6 +43,8 @@ int  x_picture_load_file( x_picture_t *  pic , char *  file_path) ;
 int  x_root_pixmap_available( Display *  display) ;
 
 int  x_picture_load_background( x_picture_t *  pic) ;
+
+int  x_picture_modifier_is_normal( x_picture_modifier_t *  pic_mod) ;
 
 
 #endif
