@@ -129,7 +129,8 @@ typedef struct  x_screen
 
 x_screen_t *  x_screen_new( ml_term_t *  term , x_font_manager_t *  font_man ,
 	x_color_manager_t *  color_man , x_termcap_entry_t *  termcap ,
-	u_int  brightness , u_int  fade_ratio , x_keymap_t *  keymap ,
+	u_int  brightness , u_int contrast , u_int gamma ,
+	u_int  fade_ratio , x_keymap_t *  keymap ,
 	u_int  screen_width_ratio , u_int  screen_height_ratio ,
 	int  xim_open_in_startup , char *  mod_meta_key , x_mod_meta_mode_t  mod_meta_mode ,
 	x_bel_mode_t  bel_mode , int  prefer_utf8_selection , char *  pic_file_path ,
