@@ -79,6 +79,8 @@ typedef struct x_config
 	
 	u_int8_t  step_in_changing_font_size ;
 	u_int16_t  brightness ;
+	u_int16_t  contrast ;
+	u_int16_t  gamma ;
 	u_int8_t  fade_ratio ;
 	int8_t  use_scrollbar ;
 	int8_t  use_login_shell ;
